updated the code

--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@ body {
   float: left;
   width: 50px;
   height: 50px;
-  background-image: url("https://pas-wordpress-media.s3.amazonaws.com/wp-content/uploads/2013/08/Customer-service-woman-on-headset-gives-OK-1024x770.jpg");
+  background-image: url("{{ url_for('static', filename='renu.jpg') }}");  
   background-size: cover;
   border-radius: 50%;
   margin-right: 10px;
@@ -366,7 +366,7 @@ height:100%;
 <div id="container">
 <div id="cont">
 <div class="footer_center">
-	   <h3>It is an AI model. &#169; <a href="https://www.batuhantoker.com/">Batuhan Toker</a>   </h3>
+	   <h3>It is an AI model. &#169; <a href="https://www.batuhantoker.com/">Renu Bot</a>   </h3>
 </div>
 </div>
 </div>
